--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="container">
             <section>
                 <h2>About Me</h2>
-                <p>I am Isaiah Prince Akpoghene a graduate of Mass communication.</p>
+                <p>I am Isaiah Prince Akpoghene, a graduate of Mass Communication.</p>
             </section>
 
             <section>
                 <h2>Services</h2>
-                <p>I am into Journalism, Media Relations, Strategic Planning, Customer Relations and Customer Support.</p>
+                <p>I am into Journalism, Media Relations, Strategic Planning, Customer Relations, and Customer Support.</p>
             </section>
         </div>
     </main>
@@ -41,16 +41,6 @@
     </footer>
 
     <!-- HubSpot Live Chat Embed Code -->
-    <script type="text/javascript">
-        //<!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48844812.js"></script>
-<!-- End of HubSpot Embed Code --> 
-    </script>
-
-    <!-- Optionally, you can use Zendesk Live Chat code instead -->
-    <!-- <script type="text/javascript">
-        // Zendesk chat embed code
-    </script> -->
-
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48844812.js"></script>
 </body>
 </html>
