--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
     <main>
         <div class="container">
             <h2>Contact Form</h2>
-            <form action="thankyou.html" method="POST">
+            <!-- Formspree form action -->
+            <form action="https://formspree.io/f/your-email@formspree.io" method="POST">
                 <label for="name">Full Name:</label>
                 <input type="text" id="name" name="name" required>
 
